--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -17,5 +17,13 @@ pipeline {
         sh 'node --version'
       }
     }
+    stage('DATABASE') {
+      agent {
+        docker { image 'mysql:8.0' }
+      }
+      steps {
+        sh 'node --version'
+      }
+    }
   }
 }
