--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -1,29 +1,45 @@
 pipeline {
-  agent none
-  stages {
-    stage('Back-end') {
-      agent {
-        docker { image 'maven:3.8.1-adoptopenjdk-11' }
-      }
-      steps {
-        sh 'mvn --version'
-      }
+    agent any
+    stages {
+        stage('Back-end') {
+            agent {
+                docker {
+                    image 'maven:3.8.1-adoptopenjdk-11'
+                    args '-v maven-cache:/root/.m2'
+                }
+            }
+            steps {
+                sh 'mvn --version'
+                sh 'mvn clean package'
+            }
+        }
+        stage('Front-end') {
+            agent {
+                docker {
+                    image 'node:16-alpine'
+                }
+            }
+            steps {
+                sh 'node --version'
+                sh 'npm install'
+                sh 'npm run build'
+            }
+        }
+        stage('Database') {
+            steps {
+                script {
+                    docker.image('mysql:8.0').withRun('-e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=mydb -p 3306:3306') { c ->
+                        echo "MySQL container running with ID: ${c.id}"
+                        sleep 15 // Give MySQL time to start
+                        sh 'docker logs ' + c.id
+                    }
+                }
+            }
+        }
     }
-    stage('Front-end') {
-      agent {
-        docker { image 'node:16-alpine' }
-      }
-      steps {
-        sh 'node --version'
-      }
+    post {
+        always {
+            cleanWs()
+        }
     }
-    stage('DATABASE') {
-      agent {
-        docker { image 'mysql:8.0' }
-      }
-      steps {
-        sh 'mysql --version'
-      }
-    }
-  }
 }
